--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
       }
   
       body {
-        font-family: Arial, sans-serif;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         background-color: #cfcfcf;
       }
   
@@ -31,6 +31,7 @@
       }
   
       .header .nav {
+        display: flex;
         float: right;
         list-style: none;
         margin-right: 20px;
@@ -56,7 +57,7 @@
         background-image: url("hero.jpg"); /* Replace with your own image */
         background-size: cover;
         background-position: center;
-        height: 600px;
+        height: 500px;
         margin-bottom: 50px;
       }
 
@@ -67,14 +68,21 @@
       }
 
       .hero .social-button {
-        height: 50px;
+        height: 40px;
         display: inline-flex;
         align-items: center;
         justify-content: center;
+        object-fit: cover;
+        object-position: center;
+      }
+
+      #linkedin-logo {
+        height: 45px;     
+        vertical-align: bottom;   
       }
   
       .hero .content {
-        padding-top: 200px;
+        padding-top: 50px;
         text-align: center;
         color: #cfcfcf;
       }
